# neighborways-video

./: .gitignore  README.md  bundle.md  bytetrack.yaml  bytetrack_config.yaml  clear_notebooks.sh  cylist.py  duplicates.py  export.py  get_best.py  hello.py  main.py  main_img.py  make_short_videos.sh  neighborways-video.code-workspace  pyproject.toml  query.py  run.sh  todo.md  try.py  view.py  yolo_db.py  yolo_readme.md
app/: README.md  index.html  server.ts
notebooks/: main.ipynb
script/: resample.sh  reset.sh  trim.sh
src/: crop_img.py  database.py  models.py
