[project]
name = "neighborways-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lap>=0.5.12",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "ultralytics>=8.3.228",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "types-tqdm>=4.67.0.20250809",
]
